tests/type-check/good/polymorphic-data-field-access.arr

data Foo<A>:
  | foo(a :: A)
end

b = foo("hello")
print(b.a)
