tests/type-check/bad/letrec.arr
a = letrec b = 5: "hello" end
b :: Number = a
